moved translaton to right folder, added overflow ellipsis to headers and fixed bug with participants not using label

--- a/src/js/Components/GroupList.scss
+++ b/src/js/Components/GroupList.scss
@@ -1,43 +1,50 @@
 .general {
-   width: 100%;
-   padding: 6px 16px;
-   animation: fadeIn ease-in 1;
-   animation-duration: .2s;
-   @keyframes fadeIn {
-      from {
-         opacity: 0;
-      }
-      to {
-         opacity: 1;
-      }
-   }
+  width: 100%;
+  padding: 6px 16px;
+  animation: fadeIn ease-in 1;
+  animation-duration: 0.2s;
+  @keyframes fadeIn {
+    from {
+      opacity: 0;
+    }
+    to {
+      opacity: 1;
+    }
+  }
 }
 
 .headerRow {
-   display: flex;
-   align-items: center;
-   height: 40px;
-   list-style: none;
-   justify-content: space-between;
-   align-items: center;
-   color: #fff;
+  display: flex;
+  align-items: center;
+  height: 40px;
+  list-style: none;
+  justify-content: space-between;
+  align-items: center;
+  color: #fff;
 }
 
 .emptyHeader {
-   font-size: 14px;
-   flex-grow: 1;
-   flex-shrink: 0;
-   flex-basis: auto;
-   overflow: hidden;
-   padding-right: 2px;
+  font-size: 14px;
+  flex-grow: 1;
+  flex-shrink: 0;
+  flex-basis: auto;
+  overflow: hidden;
+  padding-right: 2px;
 }
 
-.header {
-   flex-grow: 0;
-   flex-shrink: 0;
-   flex-basis: 60px;
-   max-width: 60px;
-   display: flex;
-   text-align: center;
-   z-index: 1;
+p.header {
+  flex-grow: 0;
+  flex-shrink: 0;
+  flex-basis: 60px;
+  max-width: 100px;
+  display: flex;
+  text-align: center;
+  z-index: 1;
+  margin-left: 0.5rem;
+  line-height: 1.2;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
+  display: block;
+  //   word-break: break-all;
 }
